# tzbot

./: .gitignore  Makefile  README.md  aliases.json  api_client.py  build_aliases.py  conftest.py  poll.py  requirements.txt  settings.py  setup.cfg  setup.py  stream.py  test_chat  tox.ini  tzbot.py  utils.py
tests/: conftest.py  test_api_client.py  test_tzbot.py
tzbot/: __init__.py  __main__.py  api_client.py  log.py  poll.py  settings.py  stream.py  tzbot.py  utils.py
