[metadata]
name = tzbot
version = 0.1
author = Martin Rocha
description = IRC bot that can tell the time in any timezone
long_description = file:README.md
url = https://github.com/mrocha/tzbot

[options]
packages = tzbot
python_requires = >=3.8
include_package_data = true
install_requires =
    aiodns==3.0.0
    aiohttp==3.7.4.post0

[options.entry_points]
console_scripts =
    tzbot = tzbot.__main__:main

[options.package_data]
tzbot = aliases.json

[options.extras_require]
testing =
    pytest==6.2.4
    pytest-asyncio==0.15.1
    pytest-mock==3.6.1
    aioresponses==0.7.2
